@@ -4,6 +4,7 @@
 - New: Total price displayed on shopping list bottom (#645)
 - New: Stock overview page has new status filter "not fresh" for combined results (#661)
 - New: "Should not be frozen" toggle on master product page and warn user if appropriate (#638)
+- New: Inventory form can now be used to link unknown barcode to product without any action (#605)
 - Improved: Finally the floating action button stays visible when the keyboard is shown (#405)
 - Improved: Bottom bar not above keyboard anymore
 - Improved: Prevent status messages from covering elements like floating action button or bottom bar
